Bug Fix: Have the company name not overlap the hamburger menu on mobile.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -98,6 +98,12 @@ header.bk-header,
 	}
 }
 
+.widget {
+	&.companyname {
+		padding-right: 20px;
+	}
+}
+
 
 /* ===============================
 	 FOOTER
